--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_ENV=production
 APP_KEY=base64:vd8aBUzSBXpfP0Dxj9ve7y/HJc9A619MBGmOjEjag18=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
