--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "procdms",
+  "name": "snooker-clubs",
   "authors": [
     "awaidus <m.awaidus@gmail.com>"
   ],
@@ -17,13 +17,11 @@
     "tests"
   ],
   "dependencies": {
-    "react-bootstrap": "^0.30.7",
     "jquery": "^3.1.1",
     "angular": "^1.6.0",
     "angular-ui-router": "^0.3.2",
     "ui-bootstrap": "^2.3.1",
     "font-awesome": "fontawesome#^4.7.0",
-    "react": "^15.4.1",
     "bootstrap": "^3.3.7",
     "angular-route": "^1.6.0",
     "angular-animate": "^1.6.0",
