--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,17 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+      "files": [
+        "app/helpers.php"
+      ]
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
         }
     },
-    "scripts": {
+  "scripts": {
         "post-root-package-install": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
