--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "cartalyst/sentinel": "2.0.*",
       "doctrine/dbal": "^2.5",
+      "laracasts/utilities": "^2.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.3.0"
