--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "laravel-mix": "^0.8.1",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "datatables.net": "^1.10.13",
+    "moment": "^2.18.1"
   }
 }
