--- a/.bowerrc
+++ b/.bowerrc
@@ -1,5 +1,5 @@
 {
-  "directory": "public/bower_components",
+  "directory": "resources/assets/bower_components",
   "color": true,
   "save": true
 }
