--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
       "laracasts/utilities": "^2.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.3.0"
+      "laravelcollective/html": "^5.3.0",
+      "yajra/laravel-datatables-oracle": "^7.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
